# ffmpeg-h264-dec

./: .gitignore  CMakeLists.txt  build.sh  gen.sh  gen_config.sh
ffmpeg-src/: CMakeLists.txt
ffmpeg-src/libavcodec/: h264.c
platform/linux/: config.h
platform/mingw32/: config.h
